# Resonance

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Developer Readme.md  README.md
cmake/: resonance-config-version.cmake.in  resonance-config.cmake.in
include/resonance/: resonance.h
scripts/: add_submodule.ps1  configure_git_repo.ps1  git_commit_changes.ps1
src/: main.c  resonance.c
tests/: entry.c
toolchains/: clangcl-llvm.cmake
